--- a/MSF/main/static/main/css/index.css
+++ b/MSF/main/static/main/css/index.css
@@ -33,10 +33,6 @@ table[data-sortable] th[data-sorted-direction="ascending"]:after {
 }
 
 #add_to_rating {
-  background: #1DB970;
-  color: white;
-  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
   cursor: pointer;
   width: 13rem;
   text-align: center;
@@ -44,6 +40,6 @@ table[data-sortable] th[data-sorted-direction="ascending"]:after {
   margin-right: 0;
   padding: 1rem;
 }
-#add_to_rating:hover {
-  background: #489C75;
+#add_to_rating:hover svg path {
+  fill:#3B414E;
 }
