--- a/MSF/main/templates/layout/basic.html
+++ b/MSF/main/templates/layout/basic.html
@@ -18,26 +18,19 @@
     <nav class="navbar" style="background: #323846;">
         <ul class="nav">
             <li class="nav-item">{% block menu-1 %}<a class="nav-link" href="{% url 'main:index' %}" style="font-size: 18px;">Рейтинг</a>{% endblock %}</li>
-            <!-- <li class="nav-item">{% block menu-2 %}<a class="nav-link" href="{% url 'main:clubs' %}">Рейтинг клубов</a>{% endblock %}</li> -->
         {% if user.is_authenticated %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" style="padding: 0; width: 100%; height: 100%; vertical-align: middle;">
-                    <img src="{% static 'main/img/icon.svg' %}" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
-                    Профиль
+            <li class="nav-item">
+                <a id="profile" href="{% url 'main:profile' %}" style="padding: 0; width: 100%; height: 100%; vertical-align: middle;">
+                    <!-- <img src="{% static 'main/img/icon.svg' %}" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy"> -->
+                    <svg width="40" height="40" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#1DB970" d="M22.5 45C34.9264 45 45 34.9264 45 22.5C45 10.0736 34.9264 0 22.5 0C10.0736 0 0 10.0736 0 22.5C0 34.9264 10.0736 45 22.5 45Z"/>
+                        <path fill="#323846" d="M27.2109 26.4727C26.5078 26.3672 26.0156 25.8047 26.0156 25.1016V23.0625C26.7539 22.2539 27.2461 21.1992 27.3516 20.0039L27.4219 18.8789C27.8086 18.668 28.1953 18.1758 28.3711 17.543C28.6172 16.6641 28.4062 15.8906 27.8437 15.8203C27.7734 15.8203 27.7031 15.8203 27.5977 15.8203L27.7383 13.7461C27.9844 10.8633 25.7695 8.4375 22.957 8.4375H22.0781C19.2656 8.4375 17.0508 10.8633 17.2266 13.7461L17.3672 15.8555C17.2969 15.8203 17.2266 15.8203 17.1562 15.8203C16.5937 15.8906 16.3828 16.6641 16.6289 17.543C16.8047 18.2109 17.2266 18.7031 17.6133 18.9141L17.6836 20.0039C17.7539 21.1992 18.2461 22.2539 18.9844 23.0625V25.1016C18.9844 25.8047 18.4922 26.3672 17.7891 26.4727C14.6953 27 9.49219 29.25 9.49219 31.6406V36.5625H35.5078V31.6406C35.5078 29.25 30.3047 27 27.2109 26.4727Z"/>
+                    </svg>
                 </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'main:profile' %}">Мой профиль</a>
-                    <a class="dropdown-item" href="{% url 'main:profile_change' %}">Изменить личные данные</a>
-                    <a class="dropdown-item" href="{% url 'main:password_change' %}">Изменить пароль</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</a>
-                </div>
             </li>
+        {% else %}
+            <li class="nav-item">{% block menu-4 %}<a class="entry" href="{% url 'main:login' %}">Войти</a>{% endblock %}</li>
         {% endif %}
-            {% if not user.is_authenticated %}
-            <li class="nav-item">{% block menu-4 %}<a id="entry" class="nav-link" href="{% url 'main:login' %}">Войти</a>{% endblock %}</li>
-            <!-- <li class="nav-item"><button class="btn btn-success" type="button"><a id="entry" href="{% url 'main:login' %}">Войти</a></button></li> -->
-            {% endif %}
         </ul>
     </nav>
     <div class="row justify-content-center" style="padding: 1rem; margin-right: 0; margin-left: 0;">
@@ -48,7 +41,7 @@
         {% block row_content %}
         {% endblock %}
     <footer style="padding: 1rem;"> <!-- class="mt-3" -->
-        <p class="text-right font-italic" style="color: white;">Created by the Team 456 · &copy; 2021</p>
+        <p class="text-right font-italic" style="color: white;">Created by the Team 456 · &copy; 2022</p>
     </footer>
 </body>
 </html>
