--- a/MSF/main/templates/main/add_club.html
+++ b/MSF/main/templates/main/add_club.html
@@ -7,12 +7,12 @@
 
 <div  class="card">
     <div  class="card-body">
-        <h4  class="card-title">Регистрация</h4>
+        <h4  class="card-title">Добавление клуба</h4>
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn">Зарегистрироваться</button>
-            <a class="buttons" href="{% url 'main:add_club' %}">Добавить клуб</a>
+            <button type="submit" class="btn">Добавить</button>
+            <a class="buttons" href="{% url 'main:register' %}">Зарегистрироваться</a>
         </form>
     </div>
 </div>
