--- a/MSF/main/templates/main/login.html
+++ b/MSF/main/templates/main/login.html
@@ -1,10 +1,15 @@
 {% extends "layout/basic.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}Вход{% endblock %}
 
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'main/css/login.css' %}">
+{% endblock %}
+
 {% block menu-4 %}
-<a id="entry" class="nav-link active disabled" style="background: #3B414E;" href="{% url 'main:login' %}">Войти</a>
+<a class="nav-link disabled entry" style="background: #3B414E; color: white;" href="{% url 'main:login' %}">Войти</a>
 {% endblock %}
 
 {% block content %}
@@ -12,11 +17,22 @@
 <div  class="card">
     <div  class="card-body">
         <h4  class="card-title">Вход</h4>
-        <form method="post">
+        <form class="needs-validation" method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Войти</button>
-            <a class="nav-link" href="{% url 'main:register' %}">Регистрация</a>
+            <!-- {{ form.non_field_errors }}
+            <div class="form-group">
+                {{ form.email.errors }}
+                <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+                {{ form.email }}
+            </div>
+            <div class="form-group">
+                {{ form.password.errors }}
+                <label for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
+                {{ form.password }}
+            </div> -->
+            <button type="submit" class="btn">Войти</button>
+            <a class="buttons" href="{% url 'main:register' %}">Зарегистрироваться</a>
         </form>
     </div>
 </div>
